# mollify

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INTEGRATIONS.md  LICENSE  PLAN.md  README.md  RESEARCH.md  pyproject.toml
.agents/skills/mollify/: SKILL.md
.agents/skills/mollify/references/: cli-reference.md  json-contract.md
.claude/: settings.json
.claude/commands/: mollify-audit.md  mollify-cleanup.md
.claude/skills/mollify/: SKILL.md
.claude/skills/mollify/references/: cli-reference.md  json-contract.md
.cursor/commands/: mollify-complexity.md  mollify-dead-code.md  mollify-deps.md  mollify-dupes.md  mollify-explain.md  mollify-graph.md  mollify-inspect.md  mollify-list.md  mollify-security.md  mollify-trace.md
.cursor/rules/: mollify.mdc
.devin/: hooks.v1.json
.devin/rules/: mollify.md
.devin/skills/mollify/: SKILL.md
.devin/skills/mollify/references/: cli-reference.md  json-contract.md
.gemini/commands/mollify/: arch.toml  audit.toml  dead-code.toml  fix.toml  graph.toml  inspect.toml  list.toml  security.toml  trace.toml  types.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  crates-release.yml  npm-release.yml  release.yml
.windsurf/: hooks.json
.windsurf/workflows/: mollify-cleanup.md
cookbook/: README.md  advisories.sample.json
cookbook/recipes/: 01-first-audit.md  02-anatomy-of-a-finding.md  03-clean-dead-code.md  04-dependency-hygiene.md  05-ci-gate.md  06-map-your-codebase.md  07-json-and-agents.md
cookbook/sample-project/: .gitignore  expected-fingerprints.txt  pyproject.toml
cookbook/sample-project/billing/: app.py
cookbook/sample-project/billing/domain/: money.py
cookbook/sample-project/billing/services/: invoice.py  ledger.py
cookbook/scripts/: ci-gate.sh  tour.sh
crates/mollify-cli/: Cargo.toml
crates/mollify-cli/src/: main.rs  osv.rs  update_check.rs
crates/mollify-core/: Cargo.toml
crates/mollify-core/assets/: .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md
crates/mollify-core/assets/.agents/skills/mollify/: SKILL.md
crates/mollify-core/assets/.agents/skills/mollify/references/: cli-reference.md
crates/mollify-core/assets/.claude/: settings.json
crates/mollify-core/assets/.claude/skills/mollify/: SKILL.md
crates/mollify-core/assets/.claude/skills/mollify/references/: cli-reference.md  json-contract.md
crates/mollify-core/assets/.codex/: config.toml
crates/mollify-core/assets/.cursor/commands/: mollify-arch.md  mollify-audit.md  mollify-explain.md  mollify-fix.md  mollify-graph.md  mollify-metrics.md  mollify-supply-chain.md  mollify-types.md
crates/mollify-core/assets/.cursor/rules/: mollify.mdc
crates/mollify-core/assets/.devin/rules/: mollify.md
crates/mollify-core/assets/.devin/skills/mollify/: SKILL.md
crates/mollify-core/assets/.devin/skills/mollify/references/: cli-reference.md
crates/mollify-core/assets/.gemini/: settings.json
crates/mollify-core/assets/.gemini/commands/mollify/: arch.toml  audit.toml  complexity.toml  deps.toml  dupes.toml  explain.toml  graph.toml  metrics.toml  security.toml  supply-chain.toml  types.toml
crates/mollify-core/assets/.windsurf/workflows/: mollify-audit.md
crates/mollify-core/assets/scripts/: mollify-report.sh
crates/mollify-core/src/: agents.rs  apihygiene.rs  arch.rs  baseline.rs  cohesion.rs  commented.rs  complexity.rs  config.rs  coverage.rs  deadcode.rs  deps.rs  dupes.rs  explain.rs  fingerprint.rs  fix.rs  git.rs  hotspots.rs  installed.rs  known.rs  lib.rs  members.rs  metrics.rs  paths.rs  plugins.rs  policy.rs  sarif.rs  security.rs  suffix.rs  supplychain.rs  trace.rs  typehealth.rs  version.rs
crates/mollify-core/tests/: chaos.rs
crates/mollify-graph/: Cargo.toml
crates/mollify-graph/src/: lib.rs
crates/mollify-lsp/: Cargo.toml
crates/mollify-lsp/src/: lib.rs
crates/mollify-mcp/: Cargo.toml
crates/mollify-mcp/src/: lib.rs
crates/mollify-parse/: Cargo.toml
crates/mollify-parse/src/: lib.rs
crates/mollify-types/: Cargo.toml
crates/mollify-types/src/: lib.rs
docs/: STATUS.md  architecture.md  birefringence-audit-plan.md  birefringenceaudit.md  ci-integration.md  code-review-2026-07-01.md  configuration.md  usage.md
docs/adr/: 0001-parser-tree-sitter.md  0002-package-aware-relative-import-resolution.md  0003-nested-import-model.md
eval/: README.md  REPORT.md  clone-corpus.sh  corpus.tsv  run-corpus.sh
npm/mollify/: README.md  package.json
npm/mollify/scripts/: make-platform-package.mjs  platform-package.js  platform-package.test.js  run-binary.js
npm/mollify/types/: output-contract.d.ts
scripts/: bump-version.sh  check-versions.sh  fetch-advisories.py  mollify-report.sh  sync-agent-assets.sh
