[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Favio Vázquez <favio.vazquezp@gmail.com>"]
repository = "https://github.com/FavioVazquez/mollify"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
rayon = "1"
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustc-hash = "2"
camino = { version = "1", features = ["serde1"] }

[profile.release]
lto = "thin"
codegen-units = 1
