[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Favio Vázquez <favio.vazquezp@gmail.com>"]
repository = "https://github.com/FavioVazquez/mollify"
# MSRV is driven by the ruff parser crates (edition 2024, rustc 1.94). The
# `rust-toolchain.toml` pins `stable`, which satisfies this on CI and locally.
rust-version = "1.94"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# Astral's ruff Python parser/AST (full-fidelity) — published on crates.io, so
# every distribution channel (crates.io publish, PyPI, npm, source) builds it.
# Pinned for reproducibility. See docs/adr/0001-parser-tree-sitter.md.
ruff_python_parser = "=0.0.3"
ruff_python_ast = "=0.0.3"
ruff_source_file = "=0.0.3"
ruff_text_size = "=0.0.3"
rayon = "1"
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustc-hash = "2"
camino = { version = "1", features = ["serde1"] }

[profile.release]
lto = "thin"
codegen-units = 1
