[package]
name = "mollify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mollify — deterministic codebase intelligence for Python (CLI)."

[[bin]]
name = "mollify"
path = "src/main.rs"

[dependencies]
mollify-types = { path = "../mollify-types" }
mollify-core = { path = "../mollify-core" }
mollify-mcp = { path = "../mollify-mcp" }
clap.workspace = true
serde_json.workspace = true
camino.workspace = true
anyhow.workspace = true
# Live supply-chain advisory fetch (OSV). Kept out of mollify-core so the
# analysis core stays pure/offline/deterministic; the CLI does the network I/O.
ureq = { version = "2", features = ["json"] }
