[package]
name = "mollify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Analysis orchestration for Mollify: dead-code and dependency-hygiene engines (more to come)."

[dependencies]
mollify-types = { path = "../mollify-types", version = "0.1.3" }
mollify-parse = { path = "../mollify-parse", version = "0.1.3" }
mollify-graph = { path = "../mollify-graph", version = "0.1.3" }
camino.workspace = true
xxhash-rust.workspace = true
rustc-hash.workspace = true
toml = "0.9"
serde.workspace = true
serde_json.workspace = true
# Embeds the per-agent skill/hook/workflow/rule artifacts (the repo's `.claude`,
# `.cursor`, `.gemini`, `.codex`, `.agents`, `.devin`, `.windsurf` trees) into
# the binary so `mollify init --agent <name>` can scaffold them into any repo.
include_dir = "0.7"

[dev-dependencies]
serde_json.workspace = true
