[package]
name = "mollify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Analysis engines for Mollify: dead code, dependency hygiene, architecture, complexity, duplication, security, type health, coverage, and supply chain."

[dependencies]
mollify-types = { path = "../mollify-types", version = "0.1.6" }
mollify-parse = { path = "../mollify-parse", version = "0.1.6" }
mollify-graph = { path = "../mollify-graph", version = "0.1.6" }
camino.workspace = true
xxhash-rust.workspace = true
rustc-hash.workspace = true
toml = "1.1"
serde.workspace = true
serde_json.workspace = true
# Embeds the per-agent skill/hook/workflow/rule artifacts (the repo's `.claude`,
# `.cursor`, `.gemini`, `.codex`, `.agents`, `.devin`, `.windsurf` trees) into
# the binary so `mollify init --agent <name>` can scaffold them into any repo.
include_dir = "0.7"
