[package]
name = "mollify-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Module/symbol graph + reachability for Mollify."

[dependencies]
mollify-parse = { path = "../mollify-parse", version = "0.1.1" }
camino.workspace = true
rustc-hash.workspace = true
ignore.workspace = true
rayon.workspace = true
serde_json.workspace = true
