[package]
name = "mollify-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mollify Language Server — real-time diagnostics over stdio (LSP)."

[dependencies]
mollify-types = { path = "../mollify-types" }
mollify-core = { path = "../mollify-core" }
camino.workspace = true
serde_json.workspace = true
