[package]
name = "mollify-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Model Context Protocol (stdio) server for Mollify — the one server every agent front-end calls."

[dependencies]
mollify-types = { path = "../mollify-types", version = "0.1.3" }
mollify-core = { path = "../mollify-core", version = "0.1.3" }
serde_json.workspace = true
camino.workspace = true

[dev-dependencies]
serde_json.workspace = true
