[package]
name = "mollify-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python parsing for Mollify, built on Astral's ruff_python_parser/ruff_python_ast behind parser-agnostic types (see ADR-0001)."

[dependencies]
ruff_python_parser.workspace = true
ruff_python_ast.workspace = true
ruff_source_file.workspace = true
ruff_text_size.workspace = true
camino.workspace = true
thiserror.workspace = true
